--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
     <main>
         <div id="app">
-            <div id="thumbs" class="d-flex justify-content-center flex-column">
+            <div class="text-center">
                 <img :src="source + seasons[counter].Image" alt="" class="boxArt">
-                <div class="buttons">
+                <div class="buttons text-justify">
                     <button type="button" @click="counterDown">previous</button>
                     <button type="button" @click="counterUp">Next</button>
+                </div>
+                <div class="thumbs">
+                    <img v-for="season in seasons" :src="source + seasons.Image"/>
                 </div>
         </div>
     </main>
