--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
                     <button type="button" @click="counterDown">previous</button>
                     <button type="button" @click="counterUp">Next</button>
                 </div>
+
                 <div class="thumbs">
-                    <img v-for="season in seasons" :src="source + seasons.Image"/>
+                    <img v-for="season in seasons" :src="seasons.Image"/>
                 </div>
+
         </div>
     </main>
 
