bloccato su un vfor 2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="thumbs">
-                    <img v-for="season in seasons" :src="seasons.Image"/>
+                    <img v-for="season in seasons" :src="source + seasons.Image"/>
                 </div>
 
         </div>
