vue bloccato su vfor3

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <div id="app">
             <div class="text-center">
-                <img :src="source + seasons[counter].Image" alt="" class="boxArt">
+                <img :src="source + seasons[counter].Image" class="boxArt">
                 <div class="buttons text-justify">
                     <button type="button" @click="counterDown">previous</button>
                     <button type="button" @click="counterUp">Next</button>
